--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,9 @@
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-weight: 400;
+  font-size: 16px;
 
-  color-scheme: light dark;
   background-color: rgba(255, 255, 255);
-  color: #242424;
+  color: #000000;
 }
 
