--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 :root {
-  font-family: 'Inter', sans-serif;
+  font-family: sans-serif;
   font-weight: 400;
   font-size: 16px;
 
